# web-hw-10

./: .env.example  pyproject.toml
quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_scrap_url.py
quotes/quoteapp/templates/quoteapp/: base.html  index.html  scrap.html  tag.html
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  models.py  urls.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/users/templates/users/: login.html  signup.html
quotes/utils/: add_quotes_to_mongo.py  custom_migration.py
